<resources>
    <string name="app_name">Androidproject</string>
    <string name="tab_menu_alert">发现</string>
    <string name="tab_menu_profile">订单</string>
    <string name="tab_menu_setting">我的</string>
    <string name="login_title">外卖点餐</string>
    <string name="hint_usename">用户名:</string>
    <string name="hint_password">密码:</string>
    <string name="copyright_information">登陆</string>
    <string name="source">source:</string>
    <string name="source_hint">Input Source</string>
    <string name="picurl">picurl:</string>
    <string name="picurl_hint">Input Picture Url</string>
    <string name="desc">desc:</string>
    <string name="desc_hint">Input description</string>
    <string name="commit">Commit</string>
    <string name="use_default">Use Default</string>
    <string name="act">act:</string>
    <string name="options">act:</string>
    <string name="options1">挑战</string>
    <string name="options2">炫耀</string>
    <string name="choice">act:</string>
    <string name="choice1">request</string>
    <string name="choice2">freegift</string>
    <string name="ask_gift_only">act:</string>
    <string name="ask_gift_only1">0</string>
    <string name="ask_gift_only2">1</string>
    <string name="pics">pics:</string>
    <string name="pics_hint">Input pics url</string>
    <string name="title">title:</string>
    <string name="title_hint">Input story title</string>
    <string name="description">description:</string>
    <string name="description_hint">Input description</string>
    <string name="img">img:</string>
    <string name="img_hint">请输入图片URL</string>
    <string name="msg">msg:</string>
    <string name="msg_hint">请输入msg</string>
    <string name="summary">summary:</string>
    <string name="targetUrl">targetUrl:</string>
    <string name="targetUrl_hint">Input targetUrl</string>
    <string name="summary_hint">Input summary</string>
    <string name="type">type:</string>
    <string name="type_hint">Input type</string>
    <string name="url">url:</string>
    <string name="url_hint">Input url</string>
    <string name="playurl">playurl:</string>
    <string name="playurl_hint">Input playurl</string>
    <string name="openid_hint">Input openid</string>
    <string name="openid">receiver:</string>
    <string name="add_openid">click to add</string>
    <string name="title_activity_return">ReturnActivity</string>
    <string name="title_activity_auth">授权</string>
    <string name="app_back">返回</string>
    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>
    <string name="app_continue">继续</string>
    <string name="app_tip">提示</string>
    <string name="app_send">发送</string>
    <string name="app_set">设置</string>
    <string name="app_save">保存</string>
    <string name="app_delete">删除</string>
    <string name="app_nextstep">下一步</string>
    <string name="app_prevstep">上一步</string>
    <string name="app_finish">完成</string>
    <string name="app_find">查找</string>
    <string name="app_edit">编辑</string>
    <string name="app_main_login">登陆</string>
    <string name="app_main_api">API</string>
    <string name="app_main_qq_share">QQ分享(无需登录)</string>
    <string name="app_main_qzon_share">QZone(无需登录)</string>
    <string name="app_main_social_api">社交API</string>
    <string name="app_main_is_support_sso_login">是否支持SSO登陆</string>
    <string name="app_main_get_user_info">获取用户资料API</string>
    <string name="app_get_unionid">获取app unionid</string>
    <string name="app_main_add_friend_in_game">加好友</string>
    <string name="app_main_set_avatar">设置头像</string>
    <string name="app_main_set_emotion">设置表情</string>
    <string name="app_main_texting">聊天</string>
    <string name="app_main_audio_chat">语音</string>
    <string name="app_main_video_chat">视频</string>
    <string name="app_main_visit_qzone_gallery">访问空间相册</string>
    <string name="app_main_wap">临时会话状态API(无需登陆)</string>
    <string name="app_main_weiyun">微云</string>
    <string name="app_main_others">其他API</string>
    <string name="app_main_appbar">应用吧API</string>
    <string name="app_main_qqgroupp_api">群API</string>
    <string name="app_main_is_qq_installed">是否安装QQ</string>
    <string name="app_main_mini_app">小程序/小游戏</string>
    <string name="app_main_jump_mini_app">唤起主体小程序/小游戏</string>
    <string name="app_main_jump_mini_app_not_privilege">唤起主体小程序/小游戏(未授权能力)</string>
    <string name="verify_password_null_tip">密码不能为空，请输入密码</string>
    <string name="fmt_date">M月d日</string>
    <string name="fmt_longdate">yyyy年M月d日</string>
    <string name="fmt_datetime" formatted="false">M月d日 %skk:mm</string>
    <string name="fmt_patime">kk:mm</string>
    <string name="fmt_longtime" formatted="false">yyyy年M月d日 %skk:mm</string>
    <string name="fmt_in60min" formatted="false">%d分钟前</string>
    <string name="fmt_justnow">1分钟内</string>
    <string name="fmt_dawn">凌晨</string>
    <string name="fmt_morning">早上</string>
    <string name="fmt_noon">中午</string>
    <string name="fmt_afternoon">下午</string>
    <string name="fmt_evening">晚上</string>
    <string name="fmt_pre_yesterday">昨天</string>
    <string name="fmt_iap_err" formatted="false">网络连接不可用，请稍候重试</string>
    <string name="app_share">分享</string>
    <string name="enter">主页面(隐藏)</string>
    <string name="reg">将该app注册到微信</string>
    <string name="goto_send">跳转到发消息界面</string>
    <string name="launch_wx">启动微信</string>
    <string name="check_timeline_supported">检查是否支持发送到朋友圈</string>
    <string name="send_to_wx_title">发送到微信</string>
    <string name="get_from_wx_title">从微信接收</string>
    <string name="show_from_wx_title">显示微信请求的消息</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="send">发送到微信</string>
    <string name="receive">从微信接收</string>
    <string name="is_timeline">是否分享到朋友圈</string>
    <string name="send_text">邀请微信好友(详情页)</string>
    <string name="send_text_default">很好玩的游戏哦。</string>
    <string name="send_img">邀请微信好友(下载)</string>
    <string-array name="send_img_item">
        <item>确认发送</item>
    </string-array>
    <string name="send_img_file_not_exist">文件不存在</string>
    <string name="send_pic">发送照片</string>
    <string name="send_music">发送音乐</string>
    <string-array name="send_music_item">
        <item>发送音乐url</item>
        <item>发送低带宽音乐url</item>
    </string-array>
    <string name="send_video">发送视频</string>
    <string-array name="send_video_item">
        <item>发送视频url</item>
        <item>发送低带宽视频url</item>
    </string-array>
    <string name="send_webpage">发送网页</string>
    <string-array name="send_webpage_item">
        <item>发送网页url</item>
    </string-array>
    <string name="send_appdata">发送app消息</string>
    <string-array name="send_appdata_item">
        <item>发送app文件本地路径</item>
        <item>发送app二进制数据</item>
        <item>发送无附件的app</item>
    </string-array>
    <string name="send_emoji">发送表情消息到微信</string>
    <string-array name="send_emoji_item">
        <item>发送表情本地路径</item>
        <item>发送表情二进制数据</item>
    </string-array>
    <string-array name="send_emoji_item_format">
        <item>发送GIF图片</item>
        <item>发送非GIF图片</item>
    </string-array>
    <string name="share_text_to_weixin">回应文本到微信</string>
    <string name="share_text_default">很好玩的第三方应用哦，分享给大家吧</string>
    <string name="share_url_to_weixin">回应URL到微信</string>
    <string name="share_pic_to_weixin">回应图片到微信</string>
    <string name="share_music_to_weixin">回应音乐到微信</string>
    <string name="share_video_to_weixin">回应视频到微信</string>
    <string name="share_appdata_to_weixin">回应app消息到微信</string>
    <string name="register_as_weixin_app_sender">注册微信事件发送器</string>
    <string name="get_token_from_weixin">获取微信访问Token</string>
    <string name="unregister_from_weixin">从微信反注册</string>
    <string name="show_from_wx_tip">这个界面用于显示微信向第三方app请求显示的信息</string>
    <string name="str_image_local">本地图片</string>
    <string name="str_image_net">网络图片</string>
    <string name="qqshare_imageUrl_lable">imageUrl</string>
    <string name="publish_videoPath_lable">videoPath</string>
    <string name="qqshare_imageUrl_content">http://inews.gtimg.com/newsapp_bt/0/876781763/1000</string>
    <string name="str_default_share">默认</string>
    <string name="str_audio_share">音乐分享</string>
    <string name="str_image_share">纯图分享</string>
    <string name="str_app_share">应用分享</string>
    <string name="str_image_text_share">分享</string>
    <string name="str_publish_mood">说说</string>
    <string name="str_publish_video">视频</string>
    <string name="str_share_type">内容类型: </string>
    <string name="share_prize_id">活动id</string>
    <string name="share_prize_id_hint">填写活动id，不能为空</string>
    <string name="special_qzone_action">QQ空间: </string>
    <string name="default_qzone_dialog">Qzone弹窗</string>
    <string name="qzone_item_hide">Qzone隐藏</string>
    <string name="qqshare_title_hint">input title</string>
    <string name="qqshare_title_content">腾讯新闻分享标题</string>
    <string name="qqshare_summary_hint">input summary</string>
    <string name="qqshare_summary_content">新闻分享摘要内容,这里是QQ分享摘要测试, 字数不够? 再加点?</string>
    <string name="qqshare_audio_url_lable">audio url</string>
    <string name="qqshare_audioUrl_hint">input music url</string>
    <string name="qqshare_audioUrl_content">http://mr3.douban.com/201307291529/13a106d9b49a9a8446fd3c18f77dc395/view/song/small/p8508.mp3</string>
    <string name="qqshare_targetUrl_lable">targetUrl</string>
    <string name="qqshare_targetUrl_hint">input target url</string>
    <string name="qqshare_targetUrl_content">http://www.qq.com/</string>
    <string name="qqshare_imageUrl_hint">input image url</string>
    <string name="qqshare_appName_lable">app name</string>
    <string name="qqshare_ark_lable">ARK JSON串（选填）</string>
    <string name="qqshare_appName_hint">input app name</string>
    <string name="qqshare_ark_hint">input ark json string></string>
    <string name="qqshare_appName_content">测试应用</string>
    <string name="qzoneshare_title_content">空间分享测试</string>
    <string name="qzoneshare_summary_content">分享生活留住感动分享生活留住感动分享生活留住感动分享生活留住感动分享生活留住感动分享生活留住感动</string>
    <string name="str_album_list">相册列表</string>
    <string name="str_photo_list">照片列表</string>
    <string name="str_add_album">创建相册</string>
    <string name="str_upload_photo">上传照片</string>
    <string name="str_wpa_input_uin">请输入对方qq号</string>
    <string name="qq_group_dialog_title">输入参数</string>
    <string name="qq_group_description">在下面的输入框填入组织ID</string>
    <string name="label_description">在下面的输入框输入标签值</string>
    <string name="threadid_description">在下面的输入框输入主题ID</string>
    <string name="str_file_local">本地文件</string>
    <string name="notification_error_ssl_cert_invalid">https证书无效，是否继续访问?</string>
    <string name="str_mini_program_share">小程序</string>
    <string name="please_click_login_btn">请点击登录</string>
    <string name="weibosdk_demo_step_to_obtain_code">第一步：获取 Code</string>
    <string name="weibosdk_demo_step_to_obtain_token">第二步：通过 Code 获取 Token</string>
    <string name="weibosdk_demo_code_text_hint">第一步获取到的 Code：（一次性有效）</string>
    <string name="weibosdk_demo_token_text_hint">第二步获取到的 Token：</string>
    <string name="weibosdk_demo_token_to_string_format">Token：%1$s \nRefresh Token：%2$s \nexpires_in：%3$s</string>
    <string name="weibosdk_demo_token_to_string_format_1">Token：%1$s \n有效期：%2$s</string>
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="weibosdk_demo_toast_obtain_code_success">获取 Code 成功</string>
    <string name="weibosdk_demo_toast_obtain_code_failed">获取 Code 失败</string>
    <string name="weibosdk_demo_toast_obtain_token_success">获取 Token 成功</string>
    <string name="weibosdk_demo_toast_obtain_token_failed">获取 Token 失败</string>
</resources>