<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    tools:context=".Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:background="@mipmap/ic_launcher_round"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/iv_logo"
                android:gravity="center_vertical"
                android:text="@string/login_title"
                android:textColor="#ffffff"
                android:textSize="25sp" />
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/textInputEmail"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="#ffffff">

            <EditText
                android:id="@+id/u_usename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_usename" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="#ffffff">

            <EditText
                android:id="@+id/u_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:password="true" />
        </LinearLayout>

        <Button
            android:id="@+id/u_register"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_shape"
            android:text="注册"
            android:textColor="#ffffff"
            android:textSize="25sp" />
        <Button
            android:id="@+id/u_login"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_shape"
            android:text="已有账号，去登陆"
            android:textColor="#ffffff"
            android:textSize="25sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="注册"/>

</RelativeLayout>
